[gd_scene load_steps=12 format=2]

[ext_resource path="res://Resources/SelectedFrame.tres" type="StyleBox" id=1]
[ext_resource path="res://Resources/NormalFrame.tres" type="StyleBox" id=2]
[ext_resource path="res://Scripts/ImageGraphNode.gd" type="Script" id=3]
[ext_resource path="res://Assets/Icons/ImageTexture.svg" type="Texture" id=4]
[ext_resource path="res://Assets/Icons/Reload.svg" type="Texture" id=5]
[ext_resource path="res://Assets/Icons/VisualShaderPort.svg" type="Texture" id=6]
[ext_resource path="res://Assets/Icons/SoundFile.svg" type="Texture" id=7]
[ext_resource path="res://Assets/Icons/Remove.svg" type="Texture" id=8]
[ext_resource path="res://Scenes/Particles.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/Fonts/Roboto-Bold.ttf"

[sub_resource type="DynamicFont" id=2]
size = 8
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_top = -2
extra_spacing_bottom = 2
font_data = SubResource( 1 )

[node name="GraphNode" type="GraphNode"]
margin_right = 232.0
margin_bottom = 197.0
rect_min_size = Vector2( 100, 75 )
custom_colors/resizer_color = Color( 1, 1, 1, 1 )
custom_constants/port_offset = -5
custom_icons/port = ExtResource( 6 )
custom_styles/frame = ExtResource( 2 )
custom_styles/selectedframe = ExtResource( 1 )
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 0, 0.745098, 0, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 0, 0.745098, 0, 1 )
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 12.0
margin_top = 25.0
margin_right = 281.0
margin_bottom = 192.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Control" type="Control" parent="VBoxContainer"]
margin_right = 269.0
margin_bottom = 113.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Background" type="ColorRect" parent="VBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )

[node name="Thumbnail" type="TextureRect" parent="VBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="Subtitle" type="Label" parent="VBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 0.976471, 0.87451, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = -1
custom_constants/shadow_as_outline = 1
custom_fonts/font = SubResource( 2 )
align = 1
valign = 2
autowrap = true
clip_text = true

[node name="SubtitleEdit" type="TextEdit" parent="VBoxContainer"]
margin_top = 117.0
margin_right = 269.0
margin_bottom = 139.0
rect_min_size = Vector2( 0, 22 )
hint_tooltip = "Subtitles"
size_flags_horizontal = 3
wrap_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 143.0
margin_right = 269.0
margin_bottom = 167.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 63.0
margin_bottom = 19.0
text = "Duration: "
valign = 1

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
margin_left = 67.0
margin_right = 141.0
margin_bottom = 24.0
hint_tooltip = "Frame duration (in seconds)"
min_value = 0.1
max_value = 60.0
step = 0.1
page = 0.5
value = 1.0
align = 3
suffix = "s"

[node name="LoadButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 145.0
margin_right = 173.0
margin_bottom = 24.0
hint_tooltip = "Load image from file."
icon = ExtResource( 4 )
flat = true

[node name="SoundButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 177.0
margin_right = 205.0
margin_bottom = 24.0
hint_tooltip = "Load sound from file."
icon = ExtResource( 7 )
flat = true

[node name="DelSoundButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 209.0
margin_right = 237.0
margin_bottom = 24.0
hint_tooltip = "Remove sound."
icon = ExtResource( 8 )
flat = true

[node name="ReloadButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 241.0
margin_right = 269.0
margin_bottom = 24.0
hint_tooltip = "Reload image and sound."
icon = ExtResource( 5 )
flat = true
icon_align = 1

[node name="Particles" parent="." instance=ExtResource( 9 )]
visible = false

[connection signal="close_request" from="." to="." method="_on_GraphNode_close_request"]
[connection signal="offset_changed" from="." to="." method="_on_GraphNode_offset_changed"]
[connection signal="resize_request" from="." to="." method="_on_GraphNode_resize_request"]
[connection signal="focus_entered" from="VBoxContainer/Control/Thumbnail" to="." method="_on_TextureRect_focus_entered"]
[connection signal="gui_input" from="VBoxContainer/Control/Thumbnail" to="." method="_on_TextureRect_gui_input"]
[connection signal="text_changed" from="VBoxContainer/SubtitleEdit" to="." method="_on_SubtitleEdit_text_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SoundButton" to="." method="_on_SoundButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/DelSoundButton" to="." method="_on_DelSoundButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ReloadButton" to="." method="_on_ReloadButton_pressed"]
